--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "dotenv": "^16.0.3",
     "@discordjs/voice": "^0.19.0",
     "@snazzah/davey": "^0.1.7",
     "debug": "^4.4.3",
